--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.artefacts
 .env
 .venv
 env/
@@ -129,6 +128,7 @@ ENV/
 env.bak/
 venv.bak/
 ml/
+artefacts/
 
 # Spyder project settings
 .spyderproject
